add c++ primer chapter 2 const

--- a/C++ Primer/第2章 变量和基本类型.md
+++ b/C++ Primer/第2章 变量和基本类型.md
@@ -93,6 +93,9 @@ const修饰基本数据类型
 `const int &min(const int &a, const int &b);`  
 类中的成员函数  
 `void CL::func() const`  
+顶层const和底层const
+> 顶层const：表示对象本身是常量，对任何数据类型都适用，也包含常量指针，但通常不包括引用。  
+> 底层const：表示指针/引用所指的对象是常量，通常是指常量引用和指向常量的指针。
 ## 处理类型
 类型别名
 ```
