--- a/Unix网络编程/第16章 非阻塞式IO.md
+++ b/Unix网络编程/第16章 非阻塞式IO.md
@@ -206,8 +206,7 @@ Handler对象不再负责业务处理，只负责数据的接收和发送，Hand
 主线程中的MainReactor对象监控连接建立事件，收到事件后通过Acceptor对象中的accept获取连接，将新的连接分配给某个子线程。子线程中的SubReactor对象对分配的连接继续进行监听，并创建一个Handler用于处理连接的响应事件。
 ### Proactor模式
 阻塞I/O或非阻塞I/O都是同步调用，因为内核将数据从内核空间拷贝到用户空间的过程都是需要等待的，也就是说这个过程是同步的。如果内核实现的拷贝效率不高，read/send调用就会在这个同步过程中等待比较长的时间。  
-![](img/aio.png)
-异步I/O不需要在“内核数据准备好”和“数据从内核态拷贝到用户态”这两个过程等待。当发起 `aio_read`（异步 I/O）之后，就立即返回，内核自动将数据从内核空间拷贝到用户空间，这个拷贝过程同样是异步的，内核自动完成后发送通知。
+异步I/O不需要在“内核数据准备好”和“数据从内核态拷贝到用户态”这两个过程等待。当发起异步I/O之后，就立即返回。内核自动将数据从内核空间拷贝到用户空间，这个拷贝过程同样是异步的，内核自动完成后发送通知。
 ![](img/proactor.png)
 Proactor模式的工作流程：
 1. Proactor Initiator负责创建Proactor和Handler对象，并将Proactor和Handler都通过异步操作处理器注册到内核。
@@ -221,3 +220,43 @@ Proactor模式的工作流程：
 *在Linux下的aio系列异步I/O函数，是由POSIX定义的异步操作接口。aio的实现不是真正的操作系统级别支持的，而是在用户空间模拟出来的异步，并且仅仅支持基于本地文件的aio异步操作，不支持网络编程中的socket，这也使得过去基于Linux的高性能网络程序都是使用Reactor方案。  
 而Windows里实现了一套完整的支持socket的异步编程接口IOCP，是由操作系统级别实现的、真正意义上异步I/O，因此在Windows里实现高性能网络程序可以使用效率更高的Proactor方案。  
 2019年，Linux内核加入了`io_uring`，减少了在用户空间和内核空间之间的数据拷贝，并降低系统调用的开销，从而提高I/O操作的性能。*
+### io_uring
+#### 缩略词
+SQ：提交队列  
+CQ：完成队列  
+SQE：提交队列项  
+CQE：完成队列项
+#### 初始化
+初始化io_uring
+```
+long io_uring_setup(u32 entries, struct io_uring_params __user *params);
+// 该函数返回一个fd，并将io_uring支持的功能以及各个数据结构在fd中的偏移量存入params。
+```
+![](img/io_uring.png)
+在 io_setup 返回的时候，内核已经初始化好了SQ和CQ，此外，内核还提供了一个Submission Queue Entries（SQEs）数组。
+![](img/io_uring_SQE.png)
+之所以额外采用了一个数组保存SQEs，是为了方便通过RingBuffer提交内存上不连续的请求。SQ和CQ中每个节点保存的都是SQEs数组的偏移量，而不是实际的请求，实际的请求只保存在SQEs数组中。  
+但由于SQ，CQ，SQEs是在内核中分配的，所以用户态程序并不能直接访问。因此io_setup的返回一个fd，应用程序通过这个fd进行内存映射（mmap）操作，和kernel共享内存。
+#### I/O提交
+I/O提交的做法是找到一个空闲的SQE，根据请求设置SQE，并将这个SQE的索引放到SQ中。SQ是一个RingBuffer，有head，tail两个成员，如果`head == tail`，意味着队列为空。SQE设置完成后，需要修改SQ的tail，以表示向RingBuffer中插入一个请求。  
+当所有I/O请求都加入SQ后，调用`io_uring_enter`来提交请求。
+```
+int io_uring_enter(unsigned int fd, u32 to_submit, u32 min_complete, u32 flags);
+```
+如果在调用`io_uring_setup`时设置了`IORING_SETUP_SQPOLL`的flag，内核会额外启动一个内核线程，称为SQ线程。这个内核线程可以运行在某个指定的core上（通过`sq_thread_cpu`配置）。这个内核线程会不停的Poll SQ，除非在一段时间内没有Poll到任何请求（通过`sq_thread_idle`配置），才会被挂起，由此减少系统调用`io_uring_enter`的次数。
+#### I/O收割
+当I/O完成时，内核负责将完成I/O在SQEs中的index放到CQ中。由于内核和用户态共享内存，因此只需在用户态遍历CQ，就能获取完成的I/O队列，之后找到相应的CQE并进行处理，最后移动head指针到tail，I/O收割就完成了。  
+由于I/O在提交的时候可以顺便返回完成的I/O，所以在最理想的情况下，I/O提交和收割都不需要使用系统调用。
+#### 交互方式
+![](img/io_uring_submit.png)
+用户提交：
+1. 将SQE写入SQEs区域，然后将SQE编号写入SQ。
+2. 更新用户态记录的队头。
+3. 如果有多个任务需要同时提交，不断重复1, 2。
+4. 将最终的队头编号写入与内核共享的SQ head。
+
+![](img/io_uring_reap.png)
+完成任务：
+1. 内核态获取任务：从队尾读取SQE，并更新SQ tail。
+2. 内核态完成任务：往CQ中写入CQE，并更新CQ head。
+3. 用户态收割任务：从CQ中读取CQE，更新CQ tail。
