add rknn model usage

--- a/RK3588/rk3588.md
+++ b/RK3588/rk3588.md
@@ -142,3 +142,14 @@ Note: 'rk356x' represents rk3562/rk3566/rk3568, 'rv1106' represents rv1103/rv110
 ```sh
 ./rknn_yolov8_demo <model_path> <image_path>
 ```
+
+### rknn模型部署
+
+调用RKNN模型进行预测的主要步骤如下：
+
+1. 初始化RKNN上下文变量`rknn_app_ctx`；
+2. 使用`rknn_init()`函数加载RKNN模型文件；
+3. 使用`rknn_inputs_set()`函数设置模型的输入数据；
+4. 调用`rknn_run()`函数执行模型推理；
+5. 使用`rknn_outputs_get()`函数获取模型的推理输出结果；
+6. 调用`rknn_destroy()`销毁模型上下文。
