--- a/RK3588/rk3588.md
+++ b/RK3588/rk3588.md
@@ -1,5 +1,26 @@
 # ROC-RK3588S-PC 开发板
 
+## 总结
+
+rk3588 开发板的使用：
+
+- [固件烧录](#linux-开发)
+- [调试](#调试)
+- [rknn 模型的转换和部署](#模型转换与部署)
+
+ai 算法的训练和部署：
+
+- 创建数据集并用 yolov8n 训练目标检测模型
+- 使用 ppocr 预训练的 ocr 模型
+- 转换为 rknn 模型并部署
+- [目标检测和 OCR 的结合](#目标检测和ocr的结合)
+
+[视频流的拉取和预处理](#视频流的拉取和预处理):
+
+- 创建线程在后台拉取视频流
+- 实现“获取当前帧”接口提供给其他算法
+- 对图像进行预处理以还原鱼眼畸变
+
 ## Linux 开发
 
 安装交叉编译环境，下载源码（rootfs, kernel, u-boot, recovery），编译 Linux 固件，见[编译 Linux 固件](https://wiki.t-firefly.com/zh_CN/ROC-RK3588S-PC/linux_compile.html)。
@@ -107,15 +128,15 @@ RK3588 内置 NPU 模块，使用的模型类型是 RKNN，模型文件后缀名
 
 RKNN-Toolkit2 适用系统 Ubuntu18.04(x64)(Python3.6)和 Ubuntu20.04(x64)(Python3.8)，详细环境依赖见文档[NPU 使用](https://wiki.t-firefly.com/zh_CN/ROC-RK3588S-PC/usage_npu.html)。
 
-执行`convert.py`将onxx模型转换为krnn模型，转换过程：
+执行`convert.py`将 onxx 模型转换为 krnn 模型，转换过程：
 
-1. RKNN对象创建和配置；
-2. 调用`rknn.load_onnx()`加载ONNX模型；
-3. 调用`rknn.build()`构建RKNN模型；
-4. 调用`rknn.export_rknn()`导出RKNN模型；
+1. RKNN 对象创建和配置；
+2. 调用`rknn.load_onnx()`加载 ONNX 模型；
+3. 调用`rknn.build()`构建 RKNN 模型；
+4. 调用`rknn.export_rknn()`导出 RKNN 模型；
 5. 资源释放。
 
-执行脚本`./build-linux.sh`，调用交叉编译器将`.rknn`模型和C++文件编译为可执行程序:
+执行脚本`./build-linux.sh`，调用交叉编译器将`.rknn`模型和 C++文件编译为可执行程序:
 
 ```sh
 ./build-linux.sh -t <target> -a <arch> -d <build_demo_name> [-b <build_type>] [-m]
@@ -143,12 +164,12 @@ Note: 'rk356x' represents rk3562/rk3566/rk3568, 'rv1106' represents rv1103/rv110
 ./rknn_yolov8_demo <model_path> <image_path>
 ```
 
-### rknn模型部署
+### rknn 模型部署
 
-调用RKNN模型进行预测的主要步骤如下：
+调用 RKNN 模型进行预测的主要步骤如下：
 
-1. 初始化RKNN上下文变量`rknn_app_ctx`；
-2. 使用`rknn_init()`函数加载RKNN模型文件；
+1. 初始化 RKNN 上下文变量`rknn_app_ctx`；
+2. 使用`rknn_init()`函数加载 RKNN 模型文件；
 3. 使用`rknn_inputs_set()`函数设置模型的输入数据；
 4. 调用`rknn_run()`函数执行模型推理；
 5. 使用`rknn_outputs_get()`函数获取模型的推理输出结果；
@@ -156,7 +177,7 @@ Note: 'rk356x' represents rk3562/rk3566/rk3568, 'rv1106' represents rv1103/rv110
 
 ## 视频流的拉取和预处理
 
-创建一个视频流类的实例，在后台启动一个线程调用ffmpeg拉取视频流到管道中，主线程不断从管道读取视频帧。当其他控制代码需要获取最新图片时，调用接口`get_image()`获取图片，将调用预处理函数对图像进行畸变还原和裁剪，并返回一个处理完成图像的clone。
+创建一个视频流类的实例，在后台启动一个线程调用 ffmpeg 拉取视频流到管道中，主线程不断从管道读取视频帧。当其他控制代码需要获取最新图片时，调用接口`get_image()`获取图片，将调用预处理函数对图像进行畸变还原和裁剪，并返回一个处理完成图像的 clone。
 
 ```cpp
 struct Frame
@@ -330,15 +351,15 @@ void VideoStream::fisheye_init()
 }
 ```
 
-## 目标检测和OCR的结合
+## 目标检测和 OCR 的结合
 
-由于yolo对于小目标的类别判断效果不佳，因此采用预处理 + yolo + 图像后处理 + OCR的方式。主要流程如下：
+由于 yolo 对于小目标的类别判断效果不佳，因此采用预处理 + yolo + 图像后处理 + OCR 的方式。主要流程如下：
 
 1. 调用`get_image`获取经过预处理的图像，格式为`cv::Mat`；
-2. 将图像输入yolo模型，获取到输出：目标框 + 类别 + 置信度；
+2. 将图像输入 yolo 模型，获取到输出：目标框 + 类别 + 置信度；
 3. 根据目标框裁剪出部分图像；
 4. 使用边缘检测等方法获取目标外层的黑色矩形框，进行背景填充和旋转；
-5. 将处理完的图像输入OCR模型，更新输出的类别。
+5. 将处理完的图像输入 OCR 模型，更新输出的类别。
 
 图像后处理的实现如下：
 
